--- a/FidgetlyCTRL/index.html
+++ b/FidgetlyCTRL/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Fidgetly Ctrl Pitch/Roll/Yaw Visualiser</title>
+    <title>Fidgetly CTRL Data Visualizer</title>
     <style>
         body{
             font-family: Helvetica;
@@ -15,11 +15,9 @@
     </style>
 </head>
 <body>
-    <h1>Fidgetly Ctrl Data Visualizer</h1>
+    <h1>Fidgetly CTRL Data Visualizer</h1>
         Click here: <button id="connect">Connect</button>
-
-    <!-- <canvas data-processing-sources="processing.pde"></canvas> -->
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/processing.js/1.6.2/processing.min.js"></script> -->
+    
     <script>
         //BLE
         let service = '78adb061-470e-405d-a44d-817e559c8839';
