--- a/FidgetlyCTRL/index.html
+++ b/FidgetlyCTRL/index.html
@@ -2,32 +2,12 @@
 <html>
 <head>
     <title>Fidgetly CTRL Data Visualizer</title>
-<<<<<<< HEAD
-
     <meta name="viewport" content="initial-scale=1, maximum-scale=1">
 
     <link href="css/ratchet.css" rel="stylesheet">
     <script src="js/ratchet.js"></script>
 </head>
 <body>
-=======
-    <style>
-        body{
-            font-family: Helvetica;
-            text-align:center;
-        }
-        ol{
-            width:400px;
-            text-align:left;
-            margin:0 auto;
-        }
-    </style>
-</head>
-<body>
-    <h1>Fidgetly CTRL Data Visualizer</h1>
-        Click here: <button id="connect">Connect</button>
-    
->>>>>>> origin/master
     <script>
         //BLE
         let service = '78adb061-470e-405d-a44d-817e559c8839';
@@ -178,7 +158,7 @@
   <a class="icon icon-info pull-left" id="battery">100</a>
 -->
   <a class="icon icon icon-search pull-right" id="connect"></a>
-  <h1 class="title">Fidgetly Ctrl Data Visualizer</h1>
+  <h1 class="title">Fidgetly CTRL Data Visualizer</h1>
 </header>
 
 <div class="content">
