--- a/FidgetlyCTRL/index.html
+++ b/FidgetlyCTRL/index.html
@@ -6,176 +6,35 @@
 
     <link href="css/ratchet.css" rel="stylesheet">
     <script src="js/ratchet.js"></script>
+    <script src="js/fidgetlyCTRL.js"></script>
 </head>
 <body>
-    <script>
-        //BLE
-        let service = '78adb061-470e-405d-a44d-817e559c8839';
-        let characteristicDeviceCustom  = 'e779f296-27f6-461b-8f96-6b0c3804bfc3';       
-        let serviceIdBattery = 'battery_service';
-        let characteristicBatt = 'battery_level';
-        let byteLength      = 44;
-
-        let deviceCustomService = null;
-        let batteryService = null;
-
-        let revs = 0;
-        let acc = [0.0,0.0,0.0];
-        let ang = [0,0,0];
-        let sc = 0;
-        let nu = 0;
-        let orientation = "";
-        let spinDirection = "notSpinning";
-
-        window.onload = () => {
-            document.getElementById('connect').onclick = connectBLE;
-        }
-
-        function connectBLE(){
-            //BLE setup. Connect and get service/characteristic notifications
-            console.log('Calling requestDevice.');
-            navigator.bluetooth.requestDevice({
-            	filters: [
-                    {namePrefix: 'Fidgetly'},
-                    {services: [service]}
-                ]
-            })
-            .then(device => device.gatt.connect())
-            //.then(server => server.getPrimaryServices(service, serviceBatt))
-            //.then(service => service[0].getCharacteristic(characteristic))
-            .then(server => server.getPrimaryService(service))
-            .then(service => service.getCharacteristic(characteristicDeviceCustom))
-            .then(characteristic => {
-                return characteristic.startNotifications()
-                .then(_ => {
-                    characteristic.addEventListener('characteristicvaluechanged',
-                                    handleCharacteristicValueChanged);
-                });
-            })
-            /*
-            .then(serviceBatt => service[1].getCharacteristic(characteristicBatt))
-            .then(characteristic => {
-                return characteristic.startNotifications()
-                .then(_ => {
-                    characteristic.addEventListener('characteristicvaluechanged',
-                                    handleCharacteristicBattValueChanged);
-                });
-            })
-            */
-            .then(_ => {
-                console.log('Notifications have been started.');
-            })
-            .catch(error => { console.log(error); });
-
-            function handleCharacteristicValueChanged(event){
-                var buffer = event.target.value.buffer;
-                var view = new DataView(buffer);
-                
-                revs = view.getInt32(0, true);
-                acc = [normalizeAcceleration(view.getInt32(4, true)), normalizeAcceleration(view.getInt32(8, true)), normalizeAcceleration(view.getInt32(12, true))];
-                ang = [normalizeGyro(view.getInt32(16, true)), normalizeGyro(view.getInt32(20, true)), normalizeGyro(view.getInt32(24, true))];
-                sc = view.getInt16(28, true);
-                da = getAngleFromAccelerometerZ(acc[2]);
-                orientation = getOrientationFromDeviceAngle(da);
-                spinDirection = getSpinDirectionFromGyroZ(ang[2]);
-
-                document.getElementById("revs").innerHTML =  revs;
-                document.getElementById("accX").innerHTML =  acc[0];
-                document.getElementById("accY").innerHTML =  acc[1];
-                document.getElementById("accZ").innerHTML =  acc[2];
-                document.getElementById("angX").innerHTML =  ang[0];
-                document.getElementById("angY").innerHTML =  ang[1];
-                document.getElementById("angZ").innerHTML = ang[2];
-                document.getElementById("sc").innerHTML =  sc;
-                document.getElementById("orientation").innerHTML = orientation;
-                document.getElementById("spinDirection").innerHTML =  spinDirection;
-            }
-
-            function handleCharacteristicBattValueChanged(event){
-                //var buffer = event.target.value.buffer;
-                //var view = new DataView(buffer);
-                battery = event.target.value;
-                document.getElementById("battery").innerHTML =  battery;
-            }
-
-
-
-        }
-
-
-        function normalizeAcceleration(value){
-            return value.toPrecision() / 1000.0;
-        }
-
-        function normalizeGyro(value){
-            return value / 1000;
-        }
-
-        function getAngleFromAccelerometerZ(accZ){
-            accZ = Math.round(accZ * 10) / 10;
-            if (accZ > 1.0){
-                accZ = 1.0;
-            } else if (accZ < -1.0){
-                accZ = -1.0;
-            }
-            return accZ;
-        }
-
-        function getOrientationFromDeviceAngle(angle){
-            if (angle > 0 ) {
-                return "facingDown";
-            } else {
-                return "facingUp";
-            }
-        }
-
-        function getSpinDirectionFromGyroZ(gyroZ){
-            if(gyroZ >= 10){
-                return "clockwise";
-            } else if(gyroZ <= -10){
-                return "counterClockwise";
-            } else {
-                return "notSpinning";
-            }
-        }
-
-        function toShort(src, startIndex){
-            startIndex = startIndex || 0;
-            return ((src[startIndex] << 8 | src[startIndex + 1]) << 16) >> 16;
-        }
-
-        function toInteger(src, startIndex){
-            startIndex = startIndex || 0;
-            return src[startIndex] << 24
-            | src[startIndex + 1] << 16
-            | src[startIndex + 2] << 8
-            | src[startIndex + 3];
-        }
-    </script>
-
-<header class="bar bar-nav">
-  <!--
-  <a class="icon icon-info pull-left" id="battery">100</a>
--->
-  <a class="icon icon icon-search pull-right" id="connect"></a>
-  <h1 class="title">Fidgetly CTRL Data Visualizer</h1>
-</header>
-
-<div class="content">
-    <ul class="table-view">
-        <li class="table-view-cell">Revolutions<span class="badge" id="revs">4</span></li>
-        <li class="table-view-cell">Spin Count<span class="badge" id="sc">1</span></li>  
-        <li class="table-view-cell">Spin Count<span class="badge" id="orientation">facingUp</span></li>  
-        <li class="table-view-cell">Spin Direction<span class="badge" id="spinDirection">Counterclockwise</span></li>
-        <li class="table-view-cell">Acc mG X<span class="badge" id="accX">4</span></li>
-        <li class="table-view-cell">Acc mG Y<span class="badge" id="accY">4</span></li>
-        <li class="table-view-cell">Acc mG Z<span class="badge" id="accZ">4</span></li>
-        <li class="table-view-cell">Ang md/s X<span class="badge" id="angX">4</span></li>
-        <li class="table-view-cell">Ang md/s Y<span class="badge" id="angY">4</span></li>
-        <li class="table-view-cell">Ang md/s Z<span class="badge" id="angZ">4</span></li>
-    </ul>
-</div>
-
-
+    <header class="bar bar-nav">
+      <a class="icon icon icon-search pull-right" id="connect_fidgetlyCTRL"></a>
+      <h1 class="title">Fidgetly CTRL Data Visualizer</h1>
+    </header>
+    <div class="content">
+        <ul class="table-view">
+            <li class="table-view-cell">Revolutions<span class="badge" id="revs">4</span></li>
+            <li class="table-view-cell">Spin Count<span class="badge" id="sc">1</span></li>  
+            <li class="table-view-cell">Orientation<span class="badge" id="orientation">facingUp</span></li>  
+            <li class="table-view-cell">Spin Direction<span class="badge" id="spinDirection">Counterclockwise</span></li>
+            <li class="table-view-cell">Acc mG X<span class="badge" id="accX">4</span></li>
+            <li class="table-view-cell">Acc mG Y<span class="badge" id="accY">4</span></li>
+            <li class="table-view-cell">Acc mG Z<span class="badge" id="accZ">4</span></li>
+            <li class="table-view-cell">Ang md/s X<span class="badge" id="angX">4</span></li>
+            <li class="table-view-cell">Ang md/s Y<span class="badge" id="angY">4</span></li>
+            <li class="table-view-cell">Ang md/s Z<span class="badge" id="angZ">4</span></li>
+            <li class="table-view-cell">RPM<span class="badge" id="rpm">4</span></li>
+            <li class="table-view-cell">Roll<span class="badge" id="roll">4</span></li>
+            <li class="table-view-cell">Pitch<span class="badge" id="pitch">4</span></li>
+            <li class="table-view-cell">Yaw<span class="badge" id="yaw">4</span></li>
+            <!--
+            <li class="table-view-cell">Value 38<span class="badge" id="value_38">4</span></li>
+            <li class="table-view-cell">Value 40<span class="badge" id="value_40">4</span></li>
+            <li class="table-view-cell">Value 42<span class="badge" id="value_42">4</span></li>
+            -->
+        </ul>
+    </div>
 </body>
 </html>
